--- a/css/custom.css
+++ b/css/custom.css
@@ -1,46 +1,72 @@
-/* Fix font loading issues */
-@font-face {
-  font-family: "et-book";
-  src: url("/css/et-book/et-book-roman-line-figures/et-book-roman-line-figures.eot");
-  src: url("/css/et-book/et-book-roman-line-figures/et-book-roman-line-figures.eot?#iefix") format("embedded-opentype"),
-       url("/css/et-book/et-book-roman-line-figures/et-book-roman-line-figures.woff") format("woff"),
-       url("/css/et-book/et-book-roman-line-figures/et-book-roman-line-figures.ttf") format("truetype"),
-       url("/css/et-book/et-book-roman-line-figures/et-book-roman-line-figures.svg#etbookromanosf") format("svg");
-  font-weight: normal;
-  font-style: normal;
+/* Change background to white and use EB Garamond font */
+html, body {
+  background-color: #ffffff;
 }
 
-@font-face {
-  font-family: "et-book";
-  src: url("/css/et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.eot");
-  src: url("/css/et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.eot?#iefix") format("embedded-opentype"),
-       url("/css/et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.woff") format("woff"),
-       url("/css/et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.ttf") format("truetype"),
-       url("/css/et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.svg#etbookromanosf") format("svg");
-  font-weight: normal;
+body {
+  font-family: "EB Garamond", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  color: #333333;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "EB Garamond", serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  color: #333333;
+}
+
+.subtitle {
+  font-family: "EB Garamond", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  color: #333333;
+}
+
+article {
+  font-family: "EB Garamond", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  color: #333333;
+}
+
+p, li {
+  font-family: "EB Garamond", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  color: #333333;
+}
+
+blockquote p {
+  font-family: "EB Garamond", serif;
+  font-optical-sizing: auto;
   font-style: italic;
+  font-weight: 400;
+  color: #333333;
 }
 
-@font-face {
-  font-family: "et-book";
-  src: url("/css/et-book/et-book-bold-line-figures/et-book-bold-line-figures.eot");
-  src: url("/css/et-book/et-book-bold-line-figures/et-book-bold-line-figures.eot?#iefix") format("embedded-opentype"),
-       url("/css/et-book/et-book-bold-line-figures/et-book-bold-line-figures.woff") format("woff"),
-       url("/css/et-book/et-book-bold-line-figures/et-book-bold-line-figures.ttf") format("truetype"),
-       url("/css/et-book/et-book-bold-line-figures/et-book-bold-line-figures.svg#etbookromanosf") format("svg");
-  font-weight: bold;
-  font-style: normal;
+code {
+  font-family: Consolas, Monaco, 'Andale Mono', monospace;
 }
 
-@font-face {
-  font-family: "et-book-roman-old-style";
-  src: url("/css/et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.eot");
-  src: url("/css/et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.eot?#iefix") format("embedded-opentype"),
-       url("/css/et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.woff") format("woff"),
-       url("/css/et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.ttf") format("truetype"),
-       url("/css/et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.svg#etbookromanosf") format("svg");
-  font-weight: normal;
-  font-style: normal;
+/* Make links more visible with white background */
+a:link, a:visited {
+  color: #0000EE;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+/* Sidenotes and margin notes */
+.sidenote, .marginnote {
+  font-family: "EB Garamond", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  color: #333333;
 }
 
 /* Fix for Yahoo Pure CSS fallback */
